--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
                 <h2 class="text-lg font-bold mb-4 text-gradient">Why You're Special</h2>
                 <div class="reason-card">
                     <p class="text-xs font-bold text-pink-600">✨ Your Anger</p>
-                    <p class="text-[11px] text-gray-600">Gusse me pyaari lgtii hoo isliye kbhi kbhi ungli krta hoon.</p>
+                    <p class="text-[11px] text-gray-600">Gusse me pyaari lgtii hoo isliye kbhi kbhi harkat
+                       krta hoon.</p>
                 </div>
                 <div class="reason-card">
                     <p class="text-xs font-bold text-pink-600">😊 Honesty</p>
@@ -271,4 +272,5 @@
         });
     </script>
 </body>
+
 </html>
